--- a/css/styleMurid.css
+++ b/css/styleMurid.css
@@ -1,7 +1,5 @@
 /* Reset Dasar */
 body, h2, table, a {
-    margin: 0;
-    padding: 0;
     font-family: Arial, sans-serif;
     color: #333;
 }
@@ -29,6 +27,7 @@ body {
 
 /* Heading di Atas Tabel */
 h2 {
+    margin-top: 10px;
     color: #4A90E2;
     font-size: 32px;
     margin-bottom: 20px;
@@ -62,20 +61,6 @@ tr:nth-child(even) {
 
 tr:hover {
     background: #e6f7ff;
-}
-
-/* Link Kembali ke Dashboard */
-a {
-    text-decoration: none;
-    color: #fff;
-    background: #4A90E2;
-    padding: 10px 15px;
-    border-radius: 5px;
-    transition: background 0.3s;
-}
-
-a:hover {
-    background: #357ABD;
 }
 
 /* Header Button */
