--- a/css/styleKartu.css
+++ b/css/styleKartu.css
@@ -9,7 +9,7 @@ body {
 
 h2 {
     margin-top: 10px;
-    color: #4A90E2;
+    color: rgb(92, 155, 255);
     font-size: 32px;
     margin-bottom: 20px;
     text-align: center;
@@ -31,7 +31,7 @@ th, td {
 }
 
 th {
-    background: #4A90E2;
+    background: rgb(92, 155, 255);
     color: #fff;
 }
 
