--- a/css/styleSiswa.css
+++ b/css/styleSiswa.css
@@ -1,7 +1,9 @@
 
 body, h2, table, a {
+    margin: 0;
+    padding: 0;
     font-family: Arial, sans-serif;
-    color: #333;
+    color:  rgb(73, 119, 193);
 }
 
 body {
@@ -15,7 +17,7 @@ body {
 }
 
 .container {
-    background: rgb(92, 155, 255);
+    background: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     padding: 20px 30px;
@@ -24,7 +26,6 @@ body {
 }
 
 h2 {
-    margin-top: 10px;
     color: rgb(92, 155, 255);
     font-size: 32px;
     margin-bottom: 20px;
@@ -59,6 +60,19 @@ tr:hover {
     background: #e6f7ff;
 }
 
+a {
+    text-decoration: none;
+    color: #fff;
+    background: rgb(92, 155, 255);
+    padding: 10px 15px;
+    border-radius: 5px;
+    transition: background 0.3s;
+}
+
+a:hover {
+    background: rgb(82, 135, 219);
+}
+
 .header-buttons {
     margin-bottom: 20px;
 }
@@ -75,13 +89,5 @@ tr:hover {
 }
 
 .header-buttons .button:hover {
-    background:  rgb(73, 119, 193);
+    background: rgb(82, 135, 219);
 }
-
-@media (max-width: 600px) {
-    table {
-      display: block;
-      overflow-x: auto;
-      -webkit-overflow-scrolling: touch;
-    }
-  }
